--- a/src/app/module/enrollment/corporate/corporatedata/corporatedata.component.html
+++ b/src/app/module/enrollment/corporate/corporatedata/corporatedata.component.html
@@ -19,7 +19,7 @@
                   </select>
                   <input type="text" aria-label="Last name" placeholder="08100000007" class="form-control input-w">
               
-                  <span class="input-group-text w-10 ">
+                  <span class="input-group-text w-10 icon-padding">
                    <i class="fas fa-envelope mr-3"></i>
                   </span>
               </div>
