--- a/src/app/module/enrollment/corporate/dependantdata/dependantdata.component.scss
+++ b/src/app/module/enrollment/corporate/dependantdata/dependantdata.component.scss
@@ -2,19 +2,24 @@
     margin: 0px;
     padding: 0px;
 }
+
 .form-container{
     width: 80%;
     height: fit-content;
     margin: 3% 5%;
     background-color: white;
-    padding: 3% ;
+    padding: 2% 2% 2% 2%;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .form-group {
     // padding-left:  5%;
-    
 }
+.text-danger{
+    color: #F07766;
+
+}
+
 i{
     color: #4976BA    ;
 }
@@ -70,3 +75,79 @@ i{
 		box-sizing: border-box;
 }
 
+
+
+.script {
+    display: block;
+    position: relative;
+    padding-left: 45px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    font-size: 20px;
+}
+  
+/* Hide the default checkbox */
+input[type=checkbox] {
+    visibility: hidden;
+}
+  
+/* creating a custom checkbox based
+    on demand */
+.geekmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+  
+/* specify the background color to be
+shown when hovering over checkbox */
+.script:hover input ~ .geekmark {
+    background: #00008F;
+
+}
+  
+/* specify the background color to be
+shown when checkbox is active */
+.script input:active ~ .geekmark {
+    background: #00008F;
+
+}
+  
+/* specify the background color to be
+shown when checkbox is checked */
+.script input:checked ~ .geekmark {
+    background: #00008F;
+
+}
+  
+/* checkmark to be shown in checkbox */
+/* It is not be shown when not checked */
+.geekmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+  
+/* display checkmark when checked */
+.script input:checked ~ .geekmark:after {
+    display: block;
+}
+  
+/* styling the checkmark using webkit */
+/* creating a square to be the sign of
+    checkmark */
+.script .geekmark:after {
+    left: 8px;
+    top: 8px;
+    bottom: 10px;
+    bottom: 5px;
+    width: 6px;
+    height: 6px;
+    border: solid white;
+    border-width: 4px 4px 4px 4px;
+}
