--- a/src/app/module/enrollment/corporate/plan/plan.component.html
+++ b/src/app/module/enrollment/corporate/plan/plan.component.html
@@ -1,23 +1,50 @@
 <div class="main-container">
-    <div class="plan-container" *ngFor="let item of [1,1,1,1,1]">
+  <div class="plan-container" *ngFor="let item of [1,1,1]">
+    
+   <input type="radio" class="radio" name="" id=""> 
+    <div class="plan">
+      <div class="plan-header">
+          <p>PLATINUM</p>
+      </div>
+      
+      <div class="plan-body">
+          <div class="plan-subtitle d-flex text-center pl-5">
+              <p>5,000,000</p>
+          </div>
+          <div class="  mt-2 input-primary" *ngFor="let item of [1,1,1,1,1]"> 
+            <label class="container"> 
+            
+              <input type="checkbox" class="black" checked="checked">
+              <span class="checkmark"></span>
+            </label>
+            <p class="label-text ">
+              Full Body Checkup Every 6 Month
+            </p>
+          </div>
+      </div>
+  </div>  
+</div>
+    <div class="plan-container" *ngFor="let item of [1,1]">
+     <input type="radio" class="radio" name="" id=""> 
       <div class="plan">
         <div class="plan-header">
             <p>PLATINUM</p>
         </div>
         <div class="plan-body">
-            <div class="plan-subtitle">
+            <div class="plan-subtitle d-flex text-center pl-5">
                 <p>5,000,000</p>
+                <i class="fas fa-edit  plan-subtitle-icon "></i>
             </div>
-            <div class="form-check mt-2" *ngFor="let item of [1,1,1,1,1]"> 
-              <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" name="" id="" value="checkedValue" checked>
-                <small> Full Body Checkup Every 6 Month</small> 
+            <div class="  mt-2 input-success" *ngFor="let item of [1,1,1]"> 
+              <label class="container mt-1"> 
+                <input type="checkbox" class="black" checked="checked">
+                <span class="checkmark"></span>
               </label>
+              <p class="label-text ">
+                Full Body Checkup Every 6 Month
+              </p>
             </div>
         </div>
     </div>  
-    
-     <input type="radio" class="radio" name="" id=""> 
-    </div>
-   
+  </div>
 </div>
